--- a/app/views/office/clients/_form.html.erb
+++ b/app/views/office/clients/_form.html.erb
@@ -12,6 +12,20 @@
       </div>
 
       <div>
+        <%= form.label :tax_type, class: "block text-sm font-medium leading-6 text-gray-900" %>
+        <fieldset>
+          <div class="mt-5 space-y-6 sm:flex sm:items-center sm:space-y-0 sm:space-x-10">
+            <% Client.tax_types.keys.each do |type| %>
+              <div class="flex items-center">
+                <%= form.radio_button :tax_type, type, class: "relative size-4 appearance-none rounded-full border border-gray-300 bg-white before:absolute before:inset-1 before:rounded-full before:bg-white not-checked:before:hidden checked:border-blue-700 checked:bg-blue-700 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-700 disabled:border-gray-300 disabled:bg-gray-100 disabled:before:bg-gray-400 forced-colors:appearance-auto forced-colors:before:hidden" %>
+                <%= form.label :tax_type, t("activerecord.attributes.client.tax_type_values.#{type}"), value: type, class: "ml-3 block text-sm/6 font-medium text-gray-900" %>
+              </div>
+            <% end %>
+          </div>
+        </fieldset>
+      </div>
+
+      <div>
         <%= form.label :tax_identification, class: "block text-sm font-medium leading-6 text-gray-900" %>
         <div class="mt-2">
           <%= form.text_field :tax_identification, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-300 focus:ring-2 focus:ring-inset focus:ring-blue-300 sm:text-sm sm:leading-6" %>
