--- a/app/views/office/clients/_form.html.erb
+++ b/app/views/office/clients/_form.html.erb
@@ -45,7 +45,9 @@
           </div>
         </fieldset>
       </div>
+    </div>
 
+    <div class="col-span-6 md:col-span-3 grid grid-cols-1 gap-x-6 gap-y-8">
       <div>
         <%= form.label :phone, class: "block text-sm font-medium leading-6 text-gray-900" %>
         <div class="mt-2">
@@ -64,6 +66,13 @@
         <%= form.label :seller_name, class: "block text-sm font-medium leading-6 text-gray-900" %>
         <div class="mt-2">
           <%= form.text_field :seller_name, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-300 focus:ring-2 focus:ring-inset focus:ring-blue-300 sm:text-sm sm:leading-6" %>
+        </div>
+      </div>
+
+      <div>
+        <%= form.label :comments %>
+        <div class="mt-2">
+          <%= form.rich_textarea :comments, rows: 4, class: "block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-300 focus:ring-2 focus:ring-inset focus:ring-blue-300 sm:text-sm sm:leading-6" %>
         </div>
       </div>
     </div>
