--- a/app/views/office/clients/show.html.erb
+++ b/app/views/office/clients/show.html.erb
@@ -19,7 +19,7 @@
         { label: Client.human_attribute_name(:name), value: @client.name },
         { label: Client.human_attribute_name(:tax_type), value: t(@client.tax_type, scope: [ :activerecord, :attributes, :client, :tax_type_values ]) },
         { label: Client.human_attribute_name(:tax_identification), value: @client.tax_identification },
-        { label: Client.human_attribute_name(:client_type), value: t("#{@client.client_type}", scope: [ :activerecord, :attributes, :client, :client_type_values ]) },
+        { label: Client.human_attribute_name(:client_type), value: t(@client.client_type, scope: [ :activerecord, :attributes, :client, :client_type_values ]) },
       ]
     ) %>
   </div>
