--- a/app/views/common/products/form/_cover.html.erb
+++ b/app/views/common/products/form/_cover.html.erb
@@ -1,40 +1,10 @@
 <%# locals: (form:, product:)  %>
 
-<div class="col-span-full" data-controller="common--image-preview">
-  <%= form.label :cover, class: "block text-sm/6 font-medium text-gray-900" %>
-  <div
-    data-controller="common--file-drag-drop"
-    data-common--file-drag-drop-drag-over-class="bg-light-blue-300"
-    class="mt-2 flex justify-center rounded-lg border border-dashed border-gray-900/25 px-6 py-10"
-  >
-    <div class="text-center">
-      <% if product.cover.attached? %>
-        <div class="mt-2">
-          <%= image_tag product.cover.variant(:thumb),
-            "data-common--image-preview-target": "canvas",
-            class: "size-14 inline-block rounded-full ring-1 ring-gray-900/10 object-cover"
-          %>
-        </div>
-      <% else %>
-        <%= image_tag "product.png",
-          "data-common--image-preview-target": "canvas",
-          class: "size-14 inline-block rounded-full ring-1 ring-gray-900/10 object-cover"
-        %>
-      <% end %>
-      <div class="mt-4 flex text-sm/6 text-gray-600">
-        <%= form.label :cover, class: "relative cursor-pointer rounded-md font-semibold text-blue-700 hover:text-blue-500" do %>
-          <span><%= t("messages.file_upload.upload") %></span>
-          <%= form.file_field :cover,
-            accept: "image/*",
-            class: "sr-only",
-            "data-common--image-preview-target": "source",
-            "data-action": "common--image-preview#show",
-            "data-common--file-drag-drop-target": "fileInput"
-          %>
-        <% end %>
-        <p class="pl-1"><%= t("messages.file_upload.drag_drop") %></p>
-      </div>
-      <p class="text-xs/5 text-gray-600"><%= t("messages.file_upload.formats") %></p>
-    </div>
+<%= render "common/forms/cover", form: form do %>
+  <div class="mt-2">
+    <%= image_tag product.cover_thumbnail,
+      "data-common--image-preview-target": "canvas",
+      class: "size-14 inline-block rounded-full ring-1 ring-gray-900/10 object-cover"
+    %>
   </div>
-</div>
+<% end %>
