--- a/app/views/factory/making_orders/show.html.erb
+++ b/app/views/factory/making_orders/show.html.erb
@@ -7,7 +7,7 @@
   ],
   title: @making_order.id,
   actions: [
-    { label: t("navigation.print"), path: edit_factory_making_order_path(@making_order), method: :get, class: "btn-success", data: { "controller": "common--print-page"} },
+    { label: t("navigation.print"), path: factory_making_order_path(@making_order), method: :get, class: "btn-success", data: { "controller": "common--print-page"} },
     { label: t("navigation.edit"), path: edit_factory_making_order_path(@making_order), method: :get, class: "btn-default" },
   ],
 ) %>
@@ -41,10 +41,10 @@
         <ul role="list" class="divide-y divide-light-gray">
           <% @making_order.making_order_items.each do |item| %>
             <li class="flex gap-x-4 py-5">
-              <% if item.product_id.present? && item.product.cover.present? %>
-                <%= image_tag item.product.cover.variant(:thumb), class: "size-12 flex-none rounded-full ring-1 ring-gray-900/10" %>
+              <% if item.product_id.present? %>
+                <%= image_tag item.product.cover_thumbnail, class: "size-12 flex-none rounded-full ring-1 ring-gray-900/10" %>
               <% else %>
-                <%= image_tag "product.png", class: "size-12 flex-none rounded-full ring-1 ring-gray-900/10" %>
+                <%= image_tag "default-product.png", class: "size-12 flex-none rounded-full ring-1 ring-gray-900/10" %>
               <% end %>
               <div class="min-w-0 grow flex items-center">
                 <div class="flex-1 grow text-sm/6 font-semibold text-gray-900">
