--- a/app/views/office/products/show.html.erb
+++ b/app/views/office/products/show.html.erb
@@ -5,8 +5,7 @@
     { title: t("titles.product.index"), path: office_products_path },
     { title: @product.name, path: office_product_path(@product) },
   ],
-  title: @product.name,
-  cover: @product.cover,
+  object: @product,
   actions: [
     { label: t("navigation.edit"), path: edit_office_product_path(@product), method: :get },
   ],
