--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -150,7 +150,7 @@
     </div>
     <a href="#">
       <span class="sr-only">Your profile</span>
-      <img class="h-8 w-8 rounded-full bg-blue-700" src="https://api.dicebear.com/9.x/avataaars-neutral/svg?seed=<%= Current.user.name %>" alt="">
+      <%= image_tag Current.user.cover_thumbnail, class: "size-8 inline-block rounded-full ring-1 ring-gray-900/10 object-cover" %>
     </a>
   </div>
 </div>
