--- a/app/views/office/clients/index.html.erb
+++ b/app/views/office/clients/index.html.erb
@@ -91,7 +91,7 @@
                       <%= client.full_address %>
                     <% end %>
                   </td>
-                  <td class="table-cell px-2 md:px-4 py-3 text-sm text-gray-500">
+                  <td class="table-cell px-2 md:px-4 py-3 whitespace-nowrap text-sm text-gray-500">
                     <%= client.tax_identification %>
                   </td>
                   <td class="hidden lg:table-cell px-2 md:px-4 py-3 text-sm text-gray-500">
