--- a/app/views/sales/clients/index.html.erb
+++ b/app/views/sales/clients/index.html.erb
@@ -1,11 +1,9 @@
 <%= render "common/headings/page",
-  title: t("titles.client.index"),
-  actions: [
-    { label: t("navigation.new"), path: new_office_client_path, method: :get },
-  ],
+  title: t(".title"),
+  actions: [],
   breadcrumbs: [
-    { title: t("navigation.dashboard"), path: office_root_path },
-    { title: t("titles.client.index"), path: office_clients_path },
+    { title: t("navigation.dashboard"), path: sales_root_path },
+    { title: t(".title"), path: sales_clients_path },
   ] %>
 
 <div class="w-full">
@@ -13,7 +11,7 @@
     <div class="flex flex-1">
       <%= search_form_for(
         @q,
-        url: office_clients_path,
+        url: sales_clients_path,
         method: :get,
         data: {
           turbo_frame: "clients_table",
@@ -53,23 +51,23 @@
                 <th scope="col" class="px-2 md:px-4 py-3 text-sm font-semibold text-gray-900 group">
                   <%= sort_link(@q, :name, Client.human_attribute_name(:name), class: "flex", data: { turbo_action: "advance"}) %>
                 </th>
-                <th scope="col" class="hidden sm:table-cell px-2 md:px-4 py-3 text-sm font-semibold text-gray-900 group">
+                <th scope="col" class="hidden md:table-cell px-2 md:px-4 py-3 text-sm font-semibold text-gray-900 group">
                   <%= sort_link(@q, :address, Client.human_attribute_name(:address), class: "flex", data: { turbo_action: "advance"}) %>
                 </th>
-                <th scope="col" class="hidden lg:table-cell px-2 md:px-4 py-3 text-sm font-semibold text-gray-900 group">
-                  <%= sort_link(@q, :province, Client.human_attribute_name(:province), class: "flex", data: { turbo_action: "advance"}) %>
-                </th>
-                <th scope="col" class="hidden sm:table-cell px-2 md:px-4 py-3 text-sm font-semibold text-gray-900 group">
-                  <%= sort_link(@q, :email, Client.human_attribute_name(:email), class: "flex", data: { turbo_action: "advance"}) %>
-                </th>
                 <th scope="col" class="table-cell px-2 md:px-4 py-3 text-sm font-semibold text-gray-900 group">
-                  <%= sort_link(@q, :client_type, Client.human_attribute_name(:client_type), class: "flex", data: { turbo_action: "advance"}) %>
+                  <%= sort_link(@q, :tax_identification, Client.human_attribute_name(:tax_identification), class: "flex", data: { turbo_action: "advance"}) %>
                 </th>
                 <th scope="col" class="hidden lg:table-cell px-2 md:px-4 py-3 text-sm font-semibold text-gray-900 group">
                   <%= sort_link(@q, :tax_type, Client.human_attribute_name(:tax_type), class: "flex", data: { turbo_action: "advance"}) %>
                 </th>
                 <th scope="col" class="hidden lg:table-cell px-2 md:px-4 py-3 text-sm font-semibold text-gray-900 group">
+                  <%= sort_link(@q, :client_type, Client.human_attribute_name(:client_type), class: "flex", data: { turbo_action: "advance"}) %>
+                </th>
+                <th scope="col" class="hidden 2xl:table-cell px-2 md:px-4 py-3 text-sm font-semibold text-gray-900 group">
                   <%= sort_link(@q, :seller_name, Client.human_attribute_name(:seller_name), class: "flex", data: { turbo_action: "advance"}) %>
+                </th>
+                <th scope="col" class="px-2 md:px-4 py-3 text-sm font-semibold text-gray-900 group">
+                  <%= sort_link(@q, :last_sales_order_at, Client.human_attribute_name(:last_sales_order_at), class: "flex", data: { turbo_action: "advance"}) %>
                 </th>
                 <th></th>
               </tr>
@@ -77,29 +75,36 @@
             <tbody class="divide-y divide-light-gray">
               <% @clients.each do |client| %>
                 <tr id="<%= dom_id client %>">
-                  <td class="whitespace-nowrap px-3 py-3 text-center text-sm text-gray-900">
+                  <td class="px-3 py-3 text-center text-sm text-gray-900">
                     <%= client.id %>
                   </td>
-                  <td class="whitespace-nowrap py-3 pl-4 pr-3 text-sm font-medium text-gray-900">
+                  <td class="py-3 pl-4 pr-3 text-sm font-medium text-gray-900">
                     <%= client.name %>
                   </td>
-                    <td class="hidden sm:table-cell whitespace-nowrap px-2 md:px-4 py-3 text-sm text-gray-500">
-                    <%= client.address %>
+                  <td class="hidden md:table-cell px-2 md:px-4 py-3 text-sm text-gray-500">
+                    <% if client.maps_url.present? %>
+                      <%= link_to(safe_url(client.maps_url), class: "flex items-center gap-2", target: "_blank") do %>
+                        <%= heroicon("map-pin", options: { class: "h-4 w-4 shrink-0 transition text-gray-300 hover:text-gray-700" }) +
+                        client.full_address %>
+                      <% end %>
+                    <% else %>
+                      <%= client.full_address %>
+                    <% end %>
                   </td>
-                  <td class="hidden lg:table-cell whitespace-nowrap px-2 md:px-4 py-3 text-sm text-gray-500">
-                    <%= client.province %>
+                  <td class="table-cell px-2 md:px-4 py-3 whitespace-nowrap text-sm text-gray-500">
+                    <%= client.tax_identification %>
                   </td>
-                  <td class="hidden sm:table-cell whitespace-nowrap px-2 md:px-4 py-3 text-sm text-gray-500">
-                    <%= client.email %>
-                  </td>
-                  <td class="table-cell whitespace-nowrap px-2 md:px-4 py-3 text-sm text-gray-500">
-                    <%= t(client.client_type, scope: [:activerecord, :attributes, :client, :client_type_values]) %>
-                  </td>
-                  <td class="hidden lg:table-cell whitespace-nowrap px-2 md:px-4 py-3 text-sm text-gray-500">
+                  <td class="hidden lg:table-cell px-2 md:px-4 py-3 text-sm text-gray-500">
                     <%= t(client.tax_type, scope: [:activerecord, :attributes, :client, :tax_type_values]) %>
                   </td>
-                  <td class="hidden lg:table-cell whitespace-nowrap px-2 md:px-4 py-3 text-sm text-gray-500">
+                  <td class="hidden lg:table-cell px-2 md:px-4 py-3 text-sm text-gray-500">
+                    <%= t(client.client_type, scope: [:activerecord, :attributes, :client, :client_type_values]) %>
+                  </td>
+                  <td class="hidden 2xl:table-cell px-2 md:px-4 py-3 text-sm text-gray-500">
                     <%= client.seller_name %>
+                  </td>
+                  <td class="whitespace-nowrap px-2 md:px-4 py-3 text-sm text-gray-500">
+                    <%= l(client.last_sales_order_at, format: :compact) if client.last_sales_order_at.present? %>
                   </td>
                   <td class="whitespace-nowrap px-3 py-3 text-center text-sm text-gray-900">
                     <%= link_to new_sales_sales_order_path(client_id: client.id), data: { turbo_frame: "_top" } do %>
