--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
     <title><%= content_for(:title) || "COMMAN" %></title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="mobile-web-app-capable" content="yes">
+    <%= tag.meta name: "appsignal-api-key", content: ENV.fetch("APPSIGNAL_FRONTEND_API_KEY", "your-appsignal-frontend-api-key") %>
+    <%= tag.meta name: "appsignal-revision", content: ENV.fetch("APP_REVISION", "0.1") %>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
