--- a/app/views/common/components/_dropdown.html.erb
+++ b/app/views/common/components/_dropdown.html.erb
@@ -25,7 +25,7 @@
         "
         data-common--dropdown-target="searchInput"
         autocomplete="false"
-        class="grid w-full cursor-default grid-cols-1 pr-2 rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-300 focus:ring-2 focus:ring-inset focus:ring-blue-300 sm:text-xs/6 sm:leading-6 <%= input_classes %>"
+        class="grid w-full cursor-default grid-cols-1 pr-2 rounded-md border-0 py-1.5 text-gray-900 shadow-sm outline-1 -outline-offset-1 outline-gray-300 placeholder:text-gray-300 focus:outline-1 focus:-outline-offset-1 focus:outline-blue-300 sm:text-xs/6 sm:leading-6 <%= input_classes %>"
         role="combobox"
         type="text"
         aria-expanded="true"
