Implement sales order show/work on page

--- a/app/views/sales/sales_orders/_form.html.erb
+++ b/app/views/sales/sales_orders/_form.html.erb
@@ -45,7 +45,7 @@
           <% end %>
         </div>
 
-        <button type="button" data-action="common--nested-form#addItem" class="cursor-pointer"><%= heroicon("plus-circle", options: { class: "h-8 w-8 text-blue" }) %></button>
+        <button type="button" data-action="common--nested-form#addItem" class="cursor-pointer"><%= heroicon("plus-circle", options: { class: "size-8 text-blue" }) %></button>
       </div>
     </div>
 
