--- a/app/views/sales/sales_orders/_sales_order.html.erb
+++ b/app/views/sales/sales_orders/_sales_order.html.erb
@@ -1,56 +1,103 @@
-<div id="<%= dom_id sales_order %>" class="w-full sm:w-auto my-5 space-y-5">
+<%# locals: (sales_order:) %>
+
+<div class="grid grid-cols-1 xl:grid-cols-2 gap-8 mt-6">
   <div>
-    <strong class="block font-medium mb-1">Client:</strong>
-    <%= sales_order.client_id %>
-  </div>
-  <div>
-    <strong class="block font-medium mb-1">Status:</strong>
-    <%= sales_order.status %>
-  </div>
-  <div>
-    <strong class="block font-medium mb-1">Confirmed at:</strong>
-    <%= sales_order.confirmed_at %>
-  </div>
-  <div>
-    <strong class="block font-medium mb-1">Fulfilled at:</strong>
-    <%= sales_order.fulfilled_at %>
-  </div>
-  <div>
-    <strong class="block font-medium mb-1">Cancelled at:</strong>
-    <%= sales_order.cancelled_at %>
-  </div>
-  <div>
-    <strong class="block font-medium mb-1">Total price cents:</strong>
-    <%= sales_order.total_price %>
-  </div>
-  <div>
-    <strong class="block font-medium mb-1">Comments</strong>
-    <%= sales_order.comments %>
-  </div>
-  <div>
-    <strong class="block font-medium mb-1">Cash discount percentage:</strong>
-    <%= sales_order.cash_discount_percentage %>
-  </div>
-  <div>
-    <strong class="block font-medium mb-1">Client discount percentage:</strong>
-    <%= sales_order.client_discount_percentage %>
+    <%= render(
+      "common/lists/description",
+      items: [
+        { label: SalesOrder.human_attribute_name(:id), value: sales_order.id },
+        { label: SalesOrder.human_attribute_name(:client_name), value: sales_order.client_name },
+        {
+          label: SalesOrder.human_attribute_name(:status),
+          block: -> {
+            status_container_for sales_order.status do
+              t("activerecord.attributes.sales_order.status_values.#{sales_order.status}")
+            end
+          },
+        },
+        { label: SalesOrder.human_attribute_name(:created_at), value: l(sales_order.created_at, format: :long) },
+        { label: SalesOrder.human_attribute_name(:confirmed_at), value: (l(sales_order.confirmed_at, format: :long) rescue "--") },
+        { label: SalesOrder.human_attribute_name(:fulfilled_at), value: (l(sales_order.fulfilled_at, format: :long) rescue "--") },
+        { label: SalesOrder.human_attribute_name(:cancelled_at), value: (l(sales_order.cancelled_at, format: :long) rescue "--") },
+      ]
+    ) %>
   </div>
 
   <div>
-    <% sales_order.sales_order_items.each do |item| %>
-      <div>
-        <strong class="block font-medium mb-1">Product:</strong>
-        <%= item.product.name %>
-      </div>
-      <div>
-        <strong class="block font-medium mb-1">Quantity:</strong>
-        <%= item.quantity %>
-      </div>
-      <div>
-        <strong class="block font-medium mb-1">Price:</strong>
-        <%= item.effective_unit_price %>
-      </div>
-    <% end %>
+    <%= render(
+      "common/lists/description",
+      items: [
+        {
+          label: SalesOrder.human_attribute_name(:subtotal_before_order_discount),
+          block: -> {
+            content_tag :div, class: "text-right tabular-nums" do
+              number_to_currency(sales_order.subtotal_before_order_discount)
+            end
+          },
+        },
+        {
+          label: SalesOrder.human_attribute_name(:client_discount_value),
+          block: -> {
+            content_tag :div, class: "text-right tabular-nums" do
+              number_to_currency(sales_order.client_discount_value)
+            end
+          },
+        },
+        {
+          label: SalesOrder.human_attribute_name(:total_price),
+          block: -> {
+            content_tag :div, class: "text-right text-gray-900 font-bold tabular-nums" do
+              number_to_currency(sales_order.subtotal_after_order_discount)
+            end
+          },
+        },
+        {
+          label: SalesOrder.human_attribute_name(:cash_discount_value),
+          block: -> {
+            content_tag :div, class: "text-right tabular-nums" do
+              number_to_currency(sales_order.cash_discount_value)
+            end
+          },
+        },
+        {
+          label: SalesOrder.human_attribute_name(:subtotal_after_cash_discount),
+          block: -> {
+            content_tag :div, class: "text-right tabular-nums" do
+              number_to_currency(sales_order.subtotal_after_cash_discount)
+            end
+          },
+        },
+
+      ]
+    ) %>
+    <div class="mb-6 overflow-hidden rounded-lg bg-white-100 shadow-sm px-4 py-5 sm:p-6">
+      <div class="mb-6 text-sm font-medium leading-6 text-gray-100"><%= SalesOrder.human_attribute_name(:comments) %></div>
+      <%= sales_order.comments %>
+    </div>
+  </div>
+</div>
+
+<div class="grid grid-cols-1 gap-8 mt-6">
+  <div class="grid grid-cols-1 mb-6 px-4 sm:px-6 overflow-hidden rounded-lg bg-white-100 shadow-sm">
+    <table class="min-w-full divide-y divide-light-gray-300 bg-white-100">
+      <thead>
+        <tr>
+          <th scope="col" class="py-3.5 pr-3 pl-4 text-left text-sm font-semibold text-gray-900 sm:pl-0"><%= SalesOrderItem.human_attribute_name(:product) %></th>
+          <th scope="col" class="hidden md:table-cell w-0 px-3 py-3.5 text-right text-sm font-semibold text-gray-900"><%= SalesOrderItem.human_attribute_name(:unit_price) %></th>
+          <th scope="col" class="hidden md:table-cell w-0 px-3 py-3.5 text-right text-sm font-semibold text-gray-900"><%= SalesOrderItem.human_attribute_name(:quantity) %></th>
+          <th scope="col" class="hidden md:table-cell w-0 px-3 py-3.5 text-center text-sm font-semibold text-gray-900"><%= SalesOrderItem.human_attribute_name(:status) %></th>
+          <th scope="col" class="hidden md:table-cell w-0 px-3 py-3.5 text-center text-sm font-semibold text-gray-900"><%= Product.human_attribute_name(:current_stock) %></th>
+          <th scope="col" class="hidden md:table-cell w-36 py-3.5 pr-4 pl-3 sm:pr-0">
+            <span class="sr-only"><%= t(".actions") %></span>
+          </th>
+        </tr>
+      </thead>
+      <tbody class="divide-y divide-light-gray-300 bg-white-100">
+        <% sales_order.sales_order_items.ordered_by_product.each do |item| %>
+          <%= render "sales/sales_orders/sales_order_item_line", sales_order: sales_order, sales_order_item: item %>
+        <% end %>
+      </tbody>
+    </table>
   </div>
 </div>
 
