--- a/app/views/common/_flash.html.erb
+++ b/app/views/common/_flash.html.erb
@@ -1,5 +1,5 @@
 <!-- Global notification live region, render this permanently at the end of the document -->
-<div aria-live="assertive" class="pointer-events-none fixed z-[100] inset-0 flex items-end px-4 py-6 sm:items-start sm:p-6">
+<div id="flash" aria-live="assertive" class="pointer-events-none fixed z-[100] inset-0 flex items-end px-4 py-6 sm:items-start sm:p-6">
   <div class="flex w-full flex-col items-center space-y-4 sm:items-end">
     <!--
       Notification panel, dynamically insert this into the live region when it needs to be displayed
