--- a/app/views/sales/sales_orders/show.html.erb
+++ b/app/views/sales/sales_orders/show.html.erb
@@ -2,7 +2,7 @@
   "common/headings/page",
   breadcrumbs: [
     { title: t("navigation.dashboard"), path: sales_root_path },
-    { title: t("titles.client.index"), path: sales_sales_orders_path },
+    { title: t("sales.sales_orders.index.title"), path: sales_sales_orders_path },
     { title: @sales_order.name, path: sales_sales_order_path(@sales_order) },
   ],
   title: @sales_order.name,
